# gridworks-debug-cli

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/gwdcli/: __init__.py  __main__.py
src/gwdcli/csv/: __init__.py  __main__.py  egauge_download.py  settings.py
src/gwdcli/events/: __init__.py  __main__.py  console.py  models.py  mqtt.py  queue_loop.py  settings.py  show_dir.py  sync.py  tui.py
src/gwdcli/utils/: settings.py
tests/: __init__.py  conftest.py  test_main.py
